--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
        <!-- Section first Here -->
            <div class="page">
                <h1>Welcome to Dharmendra</h1>
+               <p>This is demo page.</p>
            </div>
     </body>
 </html>
